--- a/views/index.css
+++ b/views/index.css
@@ -1,3 +1,7 @@
 .container {
-    display: flex; align-items: center; align-self: center; align-content: center; text-align: center;
+    display: flex;
+    align-items: center;
+    align-self: center;
+    align-content: center;
+    text-align: center;
 }
