--- a/views/index.pug
+++ b/views/index.pug
@@ -5,7 +5,7 @@ html
     title NGIX 👻
     //- styles
     link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous")
-    link(href="index.css" rel="stylesheet")
+    link(href="index.css")
 body
     h1 #{message}
     //- scripts
