--- a/views/index.css
+++ b/views/index.css
@@ -1,7 +1,24 @@
-.container {
+body,
+html {
+    /* background-color: black; */
+    background-color: #f5f5f5;
+}
+
+.nginx {
+    height: 100%;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    align-self: center;
-    align-content: center;
+    justify-content: center;
+}
+
+.nginx .logo {
+    margin-bottom: 20px;
+}
+
+.nginx .message {
     text-align: center;
+    /* color: white; */
+    color: black;
+    font-weight: 700;
 }
