--- a/views/index.pug
+++ b/views/index.pug
@@ -11,7 +11,7 @@ html
             include ./index.css
     body
         .nginx
-            img.logo(src="./logo.png" alt="logo" style="width:100px; height:100px;")
+            img.logo(src="./logo.png" loading="lazy" alt="logo" style="width:100px; height:100px;")
             h1.message #{message}
         //- scripts
         script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous")
