--- a/public/index.pug
+++ b/public/index.pug
@@ -16,7 +16,7 @@ html
             h1.message #{message}
         //- start scripts
         script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous")
-        script(src="https://cdn.jsdelivr.net/npm/lozad")
+        script(src="https://cdn.jsdelivr.net/npm/lozad/dist/lozad.min.js")
         script
             include ./assets/js/main.js
         //- end styles
