--- a/public/index.pug
+++ b/public/index.pug
@@ -12,7 +12,7 @@ html
         //- end styles
     body
         .nginx
-            img.logo.lozad(src="./assets/img/logo.png" data-src="./assets/img/logo.png" loading="lazy" alt="logo" style="width:100px; height:100px;")
+            img.logo.lozad(src="./assets/img/logo.png" data-src="./assets/img/logo.png" loading="lazy" decode="async" alt="logo" style="width:100px; height:100px;")
             h1.message #{message}
         //- start scripts
         script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous")
