--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -13,14 +13,26 @@ html {
 }
 
 .nginx .logo {
+    animation: fadeIn ease 2s;
     margin-bottom: 20px;
     width: 100px;
     min-height: 100px;
 }
 
 .nginx .message {
+    animation: fadeIn ease 3s;
     text-align: center;
     /* color: white; */
     color: black;
     font-weight: 700;
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
