--- a/public/index.pug
+++ b/public/index.pug
@@ -9,11 +9,27 @@ html
         link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous")
         style
             include ./assets/css/main.css
+            include ./assets/css/cloud.css
         //- end styles
     body
-        .nginx
-            img.logo.lozad(src="./assets/img/logo.png" data-src="./assets/img/logo.png" loading="lazy" decode="async" alt="logo")
-            h1.message #{message}
+        .cloud-content
+            .cloud-1.cloud-block
+                .cloud
+            .cloud-2.cloud-block
+                .cloud
+            .cloud-3.cloud-block
+                .cloud
+            .cloud-4.cloud-block
+                .cloud
+            .cloud-5.cloud-block
+                .cloud
+            .cloud-6.cloud-block
+                .cloud
+            .cloud-7.cloud-block
+                .cloud
+            .nginx
+                img.logo.lozad(src="./assets/img/logo.png" data-src="./assets/img/logo.png" loading="lazy" decode="async" alt="logo")
+                h1.message #{message}
         //- start scripts
         script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous")
         script(src="https://cdn.jsdelivr.net/npm/lozad/dist/lozad.min.js")
