--- a/public/index.pug
+++ b/public/index.pug
@@ -30,6 +30,11 @@ html
             .nginx
                 img.logo.lozad(src="./assets/img/logo.png" data-src="./assets/img/logo.png" loading="lazy" decode="async" alt="logo")
                 h1.message #{message}
+                if status == "Conectado"
+                    h5.connected #{status}
+                else
+                    h5.disconnected #{status}
+                
         //- start scripts
         script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous")
         script(src="https://cdn.jsdelivr.net/npm/lozad/dist/lozad.min.js")
